--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "engines": {
     "node": "10.4.0",
-    "yarn": "1.x"
+    "yarn": "1.7.0"
   },
   "main": "index.js",
   "license": "MIT",
