--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "cors": "^2.8.5",
     "css-loader": "0.28.4",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
@@ -34,6 +35,7 @@
     "history": "4.7.2",
     "immer": "^2.1.4",
     "moment": "2.18.1",
+    "multer": "^1.4.2",
     "node-sass": "^4.9.2",
     "normalize.css": "7.0.0",
     "numeral": "^2.0.6",
